# implicit-land

./: .gitignore  README.md  canvas.py  geometry.py  lib.py  main.py  script.py  script2.py  script3.py  script4.py  script5.py  script6.py  script7.py  script8.py  sdf_core.py  sdf_operations.py  sdf_primitives.py  utils.py
demos/: closest_point.py  demo.py  demo1.py  demo2.py  demo4.py  demo7.py  demo8.py  sdf_ugf.py
renderer/: Cargo.toml  pyproject.toml
renderer/src/: compute_shader.wgsl  lib.rs  main.rs  shader_template.wgsl
scripts/: script.py  script2.py  script3.py  script4.py  script5.py  script6.py  script7.py  script8.py
